# diesel_schemas

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: async_conn.rs  conn.rs  lib.rs  pool.rs
src/mysql/: mod.rs  mysql_async_conn.rs  mysql_conn.rs
src/pg/: mod.rs  pg_async_conn.rs  pg_conn.rs
tests/: async_switch.rs  cached_pool.rs  pool.rs  switch.rs
tests/data/: diesel.toml  schema.rs
tests/data/migrations/2026-03-04-075921_create_books/: up.sql
tests/data_mysql/: schema.rs
tests/data_mysql/migrations/00000000000000_diesel_initial_setup/: down.sql  up.sql
tests/data_mysql/migrations/2026-03-04-075921_create_books/: up.sql
tests/data_mysql/migrations/2026-03-04-075926_create_pages/: up.sql
tests/data_pg/migrations/2026-03-04-075926_create_pages/: up.sql
