[package]
name = "diesel-schemas"
version = "0.1.0"
edition = "2024"

[features]
default = ["postgres", "r2d2"]
postgres = ["diesel/postgres"]
r2d2 = ["diesel/r2d2"]

[dependencies]
diesel = { version = "2.3.6", features = [
    "i-implement-a-third-party-backend-and-opt-into-breaking-changes",
] }

[dev-dependencies]
diesel_migrations = "2.3.1"
