[package]
name = "diesel-schemas"
version = "0.1.0"
edition = "2024"

[features]
default = []
postgres = ["diesel/postgres"]
mysql = ["diesel/mysql"]
r2d2 = ["diesel/r2d2"]
async = ["dep:diesel-async"]

[dependencies]
diesel = { version = "2.3.6", features = [
    "i-implement-a-third-party-backend-and-opt-into-breaking-changes",
] }
diesel-async = { version = "0.7.4", features = ["postgres", "mysql"], optional = true}

[dev-dependencies]
diesel_migrations = "2.3.1"
diesel-async = { version = "0.7.4", features = ["postgres", "mysql", "async-connection-wrapper"] }
tokio = { version = "1", features = ["rt", "macros"] }
